--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,53 @@
 body {
-    color: white;
-    background-color: darkmagenta;
-    font-family: "Kanit",sans-serif;
+    color:white;
+    text-shadow: 3px 2px 3px black;
+    background-color:darkmagenta;
+    font-family:"Nunito Sans";
 }
 
 H1 {
-    text-align: left;
-    font-size: 50px;
+    text-align:center;
+    font-size:50px;
+}
+
+.img-makeup {   
+    border:5px solid black;  
+}
+
+#image {
+    text-align:center;
+    margin-top:20px;
+    padding-top:5px;
+}
+
+button {
+    font-size:15px;
+}
+
+button:hover, .js-makeup-brand:hover { 
+    color:darkgoldenrod; 
+}
+
+.js-makeup-brand { 
+    font-size:19px;
+  
+}
+
+.js-makeup-brand, button {
+    text-align:center;
+    border-color:black;
+    border-style:solid;
+    border-width:5px;
+    padding:5px;
+    font-family:"Nunito Sans";
+    cursor:pointer;
+}
+
+footer { 
+    text-align:center;
+    color:black;
+    text-shadow: 2px 2px 2px white;
+    font-size:20px;
+    margin-top:600px;
+    font-family:"Nunito Sans";
 }
